2010-09-22  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (eval-for-emacs): Send (:abort condition) where
	condition is a condition which was aborted instead of just (:abort).
	* slime.el: Handle the above change.

2010-09-22  Stas Boukarev  <stassats@gmail.com>

	* swank-clisp.lisp (*external-format-to-coding-system*): Remove
	stray :latin-1 argument for ext:make-encoding.
	Reported by Mirko Vukovic.

2010-09-20  Stas Boukarev  <stassats@gmail.com>

	* swank-cmucl.lisp (character-completion-set): Implement. Requires
	recent versions of CMUCL.
	Patch by Raymond Toy.

2010-09-18  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-backend.lisp (valid-function-name-p): New interface.
	(compiler-macroexpand-1): Use it to guard against type errors
	from COMPILER-MACRO-FUNCTION.

2010-09-18  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (before-init): push :SWANK to *FEATURES*. (lp#627313)

2010-09-18  Tobias C. Rittweiler <tcr@freebits.de>

	Make C-c C-m also expand compiler macros. (lp#638720)

	* slime.el (slime-macro/compiler-macro-expand-1): New.
	(slime-macro/compiler-macro-expand-1-inplace): New.
	(slime-editing-keys): Map `C-c C-m' to first above.
	(slime-compiler-macroexpand-1): Take prefix-arg like others.
	(slime-compiler-macroexpand-1-inplace): Ditto.
	(slime-compiler-macroexpand): Thus deleted.
	(slime-compiler-macroexpand-inplace): Ditto.

	* swank.lisp (swank-macro/compiler-macro-expand-1): New defslimefun.
	(swank-macro/compiler-macro-expand): New defslimefun.
	(macro/compiler-macro-expand-1): New.
	(macro/compiler-macro-expand): New.
	(expand-repeatedly): New helper.

2010-09-03  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-forward-cruft): Use " \t\n" to match whitespaces
	instead of [:space:], XEmacs compatibility.

2010-09-03  Helmut Eller  <heller@common-lisp.net>

	For C-c C-k, ask before loading possibly broken fasl files.

	* slime.el (slime-compilation-result): Add 2 slots: loadp and
	faslfile.